Prepearing is done

--- a/index.html
+++ b/index.html
@@ -28,9 +28,34 @@
     <noscript>
       <div><img src="https://top-fwz1.mail.ru/counter?id=3089960;js=na" style="border:0;position:absolute;left:-9999px;" alt="Top.Mail.Ru"/></div>
     </noscript><!-- //Rating@Mail.ru counter -->
-    <div class="container">
-      <h1>In the development...</h1>
-    </div><!-- AutoWebOffice: UTM or OpenStat Counter -->
+    <section id="main">
+      <div class="container">
+        <header><img class="header-logo" src="img/images/logo.png" alt="Логотип"/>
+          <div class="contacts">
+            <div class="contact contact-email"><span>Напишите нам:</span><a href="mailto:info@mycapitalland.ru" target="_blank">info@mycapitalland.ru</a></div>
+            <div class="contact contact-tel"><span>Позвоните нам:</span><a href="callto:8(800)700-95-98" target="_blank">8(800)700-95-98</a></div>
+          </div>
+        </header>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <div class="contacts-footer">
+          <div class="row">
+            <div class="col-md-4 col-sm-4">
+              <div class="contact contact-footer contact-email"><span>Напишите нам:</span><a href="mailto:info@mycapitalland.ru" target="_blank">info@mycapitalland.ru</a></div>
+            </div>
+            <div class="col-md-3 col-sm-3">
+              <div class="contact contact-footer contact-tel"><span>Позвоните нам:</span><a href="callto:8(800)700-95-98" target="_blank">8(800)700-95-98</a></div>
+            </div>
+            <div class="col-md-5 col-sm-5">
+              <div class="contact contact-footer contact-adress"><span>Наш адрес:</span><span>Москва, ул. Преображенская 24, корп. 1</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="js/scripts.min.js"></script><!-- AutoWebOffice: UTM or OpenStat Counter -->
     <script type="text/javascript">var url = "https://shop.mastervision.su/?r=api/utmopenstat";</script>
     <script type="text/javascript" src="https://shop.mastervision.su/js/utm_openstat.js" defer="defer"></script><!-- /AutoWebOffice: UTM or OpenStat Counter -->
   </body>
