--- a/index.html
+++ b/index.html
@@ -21,53 +21,60 @@
       <div><img src="https://mc.yandex.ru/watch/35450015" style="position:absolute; left:-9999px;" alt=""/></div>
     </noscript><!-- /Yandex.Metrika counter -->
     <section id="main">
-      <div class="container">
-        <header><img class="header-logo" src="img/images/logo.png" alt="Логотип"/>
-          <div class="contacts">
-            <div class="contact contact-email"><span>Напишите нам:</span><a href="mailto:info@mycapitalland.ru" target="_blank">info@mycapitalland.ru</a></div>
-            <div class="contact contact-tel"><span>Позвоните нам:</span><a href="callto:8(800)700-95-98" target="_blank">8(800)700-95-98</a></div>
-          </div>
-        </header>
-        <div class="row">
-          <div class="col-md-7">
-            <p class="pre">Онлайн-мастер-класс</p>
-            <h1 class="main-title">Научим создавать, сохранять и приумножать свои сбережения</h1>
-            <h2 class="main-subtitle">Получи инструменты к финансовой безопасности</h2>
-            <div class="main-info">
-              <p>Даты проведения: <span>с 1 по 3 августа, 19:00(мск)</span></p>
-              <p>Автор: <span>Николай Буленков</span></p>
+      <div class="main-wrapper">
+        <div class="container">
+          <header><img class="header-logo" src="img/images/logo.png" alt="Логотип"/>
+            <div class="contacts">
+              <div class="contact contact-email"><span>Напишите нам:</span><a href="mailto:info@mycapitalland.ru" target="_blank">info@mycapitalland.ru</a></div>
+              <div class="contact contact-tel"><span>Позвоните нам:</span><a href="callto:8(800)700-95-98" target="_blank">8(800)700-95-98</a></div>
             </div>
-          </div>
-          <div class="col-md-5">
-            <div class="main-img"><img src="img/images/nikolay-main.png" alt="Николай Буленков"/>
-              <div class="main-about">
-                <p><span>Буленков Николай Владимирович</span>Руководитель Обучающего цифрового агентства недвижимости “33 СЛОНА” в составе Холдинга MailRu Group</p>
+          </header>
+          <div class="row">
+            <div class="col-md-7">
+              <h1 class="main-title"><small>Онлайн-мастер-класс</small>Научим создавать, сохранять и приумножать свои сбережения</h1>
+              <h2 class="main-subtitle">Получи инструменты к финансовой безопасности</h2>
+              <div class="main-info">
+                <p>Даты проведения: <span>с 1 по 3 августа, 19:00(мск)</span></p>
+                <p>Автор: <span>Николай Буленков</span></p>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="main-img"><img src="img/images/nikolay-main.png" alt="Николай Буленков"/>
+                <div class="main-about">
+                  <p><span>Буленков Николай Владимирович</span>Руководитель Обучающего цифрового агентства недвижимости “33 СЛОНА” в составе Холдинга MailRu Group</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="container">
         <div class="main-form-wrapper">
-          <h3 class="form-title">Запишитесь прямо сейчас!</h3>
-          <form class="form form-main" action="" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8"></form>
-          <div class="email-block email-block-form">
-            <input type="hidden" value="1" name="required_fields[email]"/>
-            <input class="input input-mail input-mail-main" name="Contact[email]" type="text" placeholder="Ваш email"/>
-          </div>
-          <button class="button button-form button-form-main" type="submit">Записаться</button>
-          <div class="clearfix"></div>
-          <p class="alert-message"></p>
-          <div class="checking">
-            <input class="check" type="checkbox" id="check-1" checked="checked"/>
-            <label class="check-label" for="check-1">Я согласен с <a href="https://mycapitalland.ru/politics.pdf" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
-          </div>
-          <div style="display: none;">
-            <div id="formTypeSpecificVars-1" style="display: none;">
-              <input type="hidden" value="" id="form_newsletter_id_newsletter_1" name="Contact[id_newsletter]"/>
-            </div><!-- API код канала рекламы -->
-            <input type="hidden" value="0" id="form_newsletter_id_advertising_channel_page_1" name="Contact[id_advertising_channel_page]"/>
-            <input type="hidden" name="formId" value=""/>
-            <input type="hidden" name="formVc" value=""/>
-          </div>
+          <form class="form form-main" action="" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
+            <h3 class="form-title form-title-main">Запишитесь прямо сейчас!</h3>
+            <div class="form-container">
+              <div class="email-block email-block-form">
+                <input type="hidden" value="1" name="required_fields[email]"/>
+                <input class="input input-mail input-mail-main" name="Contact[email]" type="text" placeholder="Ваш email"/>
+              </div>
+              <button class="button button-form button-form-main" type="submit">Записаться</button>
+              <div class="clearfix"></div>
+              <p class="alert-message"></p>
+              <div class="checking">
+                <input class="check" type="checkbox" id="check-1" checked="checked"/>
+                <label class="check-label" for="check-1">Я согласен с <a href="https://mycapitalland.ru/politics.pdf" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
+              </div>
+              <div style="display: none;">
+                <div id="formTypeSpecificVars-1" style="display: none;">
+                  <input type="hidden" value="" id="form_newsletter_id_newsletter_1" name="Contact[id_newsletter]"/>
+                </div><!-- API код канала рекламы -->
+                <input type="hidden" value="0" id="form_newsletter_id_advertising_channel_page_1" name="Contact[id_advertising_channel_page]"/>
+                <input type="hidden" name="formId" value=""/>
+                <input type="hidden" name="formVc" value=""/>
+              </div>
+            </div>
+            <div class="clearfix"></div>
+          </form>
         </div>
       </div>
     </section>
@@ -96,19 +103,19 @@
         <div class="row">
               <div class="col-md-4">
                 <div class="for-item for-item-1">
-                  <h4 class="for-item">1</h4>
+                  <h4 class="for-item-title">1</h4>
                   <p class="for-item-text">Хочет разобраться, как создавать и увеличивать личный капитал</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="for-item for-item-2">
-                  <h4 class="for-item">2</h4>
+                  <h4 class="for-item-title">2</h4>
                   <p class="for-item-text">Понимает, что пенсия - не вариант, надо крутиться самостоятельно</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="for-item for-item-3">
-                  <h4 class="for-item">3</h4>
+                  <h4 class="for-item-title">3</h4>
                   <p class="for-item-text">Не хочет открывать свой бизнес, брать кредиты и сжигать мосты</p>
                 </div>
               </div>
@@ -116,19 +123,19 @@
         <div class="row">
               <div class="col-md-4">
                 <div class="for-item for-item-4">
-                  <h4 class="for-item">4</h4>
+                  <h4 class="for-item-title">4</h4>
                   <p class="for-item-text">Планирует выйти на пассивный доход в течение 5-10 лет</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="for-item for-item-5">
-                  <h4 class="for-item">5</h4>
+                  <h4 class="for-item-title">5</h4>
                   <p class="for-item-text">Хочет научится грамотно управлять своими активами</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="for-item for-item-6">
-                  <h4 class="for-item">6</h4>
+                  <h4 class="for-item-title">6</h4>
                   <p class="for-item-text">Ставит перед собой амбициозные цели и достигает их</p>
                 </div>
               </div>
@@ -136,8 +143,8 @@
       </div>
     </section>
     <section id="benefits">
-      <div class="container">
-        <div class="benefits-1">
+      <div class="benefits-1">
+        <div class="container">
           <h3 class="general-title general-title-center">Выгоды от посещения МК</h3>
           <div class="row">
             <div class="col-md-4">
@@ -166,10 +173,12 @@
             </div>
           </div>
         </div>
-        <div class="benefits-2">
+      </div>
+      <div class="benefits-2">
+        <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <div class="benefit-more"><img class="benefits-more-img" src="img/icons/" alt="Что будет на МК"/>
+              <div class="benefit-more"><img class="benefit-more-img" src="img/icons/benefit-1.png" alt="Что будет на МК"/>
                 <h3 class="general-title general-title-benefit-more">Что будет на МК</h3>
                 <ul class="benefit-more-list">
                   <li>- Разберем пошаговый план, как перейти с активного на пассивный доход без финансовых рисков для себя</li>
@@ -183,7 +192,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="benefit-more"><img class="benefits-more-img" src="img/icons/" alt="Эффект от МК"/>
+              <div class="benefit-more"><img class="benefit-more-img" src="img/icons/benefit-2.png" alt="Эффект от МК"/>
                 <h3 class="general-title general-title-benefit-more">Эффект от МК</h3>
                 <ul class="benefit-more-list">
                   <li>- Появятся полноценные выходные. Да, такое возможно!</li>
@@ -202,46 +211,40 @@
     </section>
     <section id="author">
       <div class="container">
-        <div class="author-wrapper">
-          <div class="row">
-            <div class="col-md-8">
-              <h4 class="author-title">Об авторе<small>Буленков Николай Владимирович, 37 лет</small></h4>
-              <ul class="author-list">
-                <li><span>Руководитель Обучающего цифрового агентства недвижимости “33 СЛОНА” в составе Холдинга MailRu Group</span></li>
-                <li>Тренер по личным финансам, Бизнесмен, Инвестор, член Клуба Миллионеров</li>
-                <li>За 2019 год нанял и обучил 897 менеджеров по продажам в сфере недвижимости благодаря собственной технологии потокового найма персонала</li>
-                <li><span>2017 - 2019 гг.</span></li>
-                <li>Директор по продажам Like Центра Аяза Шабутдинова</li>
-                <li>Выручка департамента продаж Москвы</li>
-                <li>2017 г. - 14 млн руб/мес</li>
-                <li>2018 г. - 50 млн руб/мес</li>
-              </ul>
-            </div>
-            <div class="col-md-4">
-              <div class="author-img"><img src="img/images/nikolay.png" alt="Николай Буленков"/></div>
-            </div>
-          </div>
+        <div class="author">
+          <h4 class="author-title">Об авторе<small>Буленков Николай Владимирович, 37 лет</small></h4>
+          <ul class="author-list">
+            <li><span>Руководитель Обучающего цифрового агентства недвижимости “33 СЛОНА” в составе Холдинга MailRu Group</span></li>
+            <li>Тренер по личным финансам, Бизнесмен, Инвестор, член Клуба Миллионеров</li>
+            <li>За 2019 год нанял и обучил 897 менеджеров по продажам в сфере недвижимости благодаря собственной технологии потокового найма персонала</li>
+            <li><span>2017 - 2019 гг.</span></li>
+            <li>Директор по продажам Like Центра Аяза Шабутдинова</li>
+            <li>Выручка департамента продаж Москвы</li>
+            <li>2017 г. - 14 млн руб/мес</li>
+            <li>2018 г. - 50 млн руб/мес</li>
+          </ul>
+          <div class="author-img"><img src="img/images/nikolay.png" alt="Николай Буленков"/></div>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="author-about">
-              <p class="author-about"><span>Награды:</span></p>
+            <div class="author-about author-about-1">
+              <p class="author-about-text"><span>Награды:</span></p>
               <ul class="author-about-list">
                 <li>- Лучший сотрудник года - Агентство Недвижимости ЮСИН</li>
                 <li>- Сертификат: Серебряный риэлтор</li>
                 <li>- Создатель самого полезного обучающего продукта на рынке (Международная Ассоциация Успешных Агентов)</li>
               </ul>
             </div>
-            <div class="author-about">
-              <p class="author-text"> <span>Сертификат от Международной Ассоциации Агентов </span>по недвижимости за создание самого эффективного обучающего продукта на рынке обучения персонала в сфере недвижимости "Симулятор сделки"</p>
-              <p class="author-text">Образование: МГТУ им. Н.Э. Баумана, высший балл</p>
+            <div class="author-about author-about-2">
+              <p class="author-about-text"> <span>Сертификат от Международной Ассоциации Агентов </span>по недвижимости за создание самого эффективного обучающего продукта на рынке обучения персонала в сфере недвижимости "Симулятор сделки"</p>
+              <p class="author-about-text">Образование: МГТУ им. Н.Э. Баумана, высший балл</p>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="author-about">
-              <p class="author-text">Онлайн обучение финансовой грамотности на практике.</p>
-              <p class="author-text">C 2014 года являюсь тренером по продажам, РОПом, Директором по продажам</p>
-              <p class="author-text">Обучил более 2500 соискателей, как увеличивать свой доход. В 2019 году столкнулся с личным финансовым кризисом, несмотря на высокие доходы. Глубоко изучил на практике (курсы, финансовые советники, практическое применение) финансовую грамотность, бухгалтерию, финучет. Применил и внедрил технологии финансового управления в личных целях. За год стал миллионером, впервые за всю трудовую деятельность (более 15 лет) появился капитал, финансовая подушка и ушла проблема денег. Доход при этом остался на том же уровне, что и во время личного финансового кризиса. Имея богатый опыт создания и проведения обучающих курсов - создал практический курс по внедрению управления финансами, финансовой грамотности и финансовой психологии. Коучинг-марафон "1 час в будущее"</p>
+            <div class="author-about author-about-3">
+              <p class="author-about-text">Онлайн обучение финансовой грамотности на практике.</p>
+              <p class="author-about-text">C 2014 года являюсь тренером по продажам, РОПом, Директором по продажам</p>
+              <p class="author-about-text">Обучил более 2500 соискателей, как увеличивать свой доход. В 2019 году столкнулся с личным финансовым кризисом, несмотря на высокие доходы. Глубоко изучил на практике (курсы, финансовые советники, практическое применение) финансовую грамотность, бухгалтерию, финучет. Применил и внедрил технологии финансового управления в личных целях. За год стал миллионером, впервые за всю трудовую деятельность (более 15 лет) появился капитал, финансовая подушка и ушла проблема денег. Доход при этом остался на том же уровне, что и во время личного финансового кризиса. Имея богатый опыт создания и проведения обучающих курсов - создал практический курс по внедрению управления финансами, финансовой грамотности и финансовой психологии. Коучинг-марафон "1 час в будущее"</p>
             </div>
           </div>
         </div>
