--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <p class="alert-message"></p>
               <div class="checking">
                 <input class="check" type="checkbox" id="check-1" checked="checked"/>
-                <label class="check-label" for="check-1">Я согласен с <a href="https://mycapitalland.ru/politics.pdf" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
+                <label class="check-label" for="check-1">Я согласен с <a href="https://mycapitalland.ru/politics.pdf" target="_blank" download="download">условиями обработки</a> персональных данных по 152 - Ф3</label>
               </div>
               <div style="display: none;">
                 <div id="formTypeSpecificVars-1" style="display: none;">
@@ -84,22 +84,26 @@
           <div class="col-md-6">
             <div class="laptop-wrapper laptop-wrapper-video">
               <div class="video-wrapper">
-                <iframe src="https://youtube.com/embed/?modestbranding=1&amp;autoplay=1&amp;mute=1" allowfullscreen="allowfullscreen"></iframe>
+                <iframe src="https://youtube.com/embed/aZnnJ5ALCGo?modestbranding=1&amp;autoplay=1&amp;mute=1" allowfullscreen="allowfullscreen"></iframe>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <h3 class="general-title">Посмотрите наше видео</h3>
-            <p class="video-text">«Если спросить любого человека, какие он знает способы приумножения сбережений, то, скорее всего, он вспомнит про банковские вклады и, возможно, но не факт, про фондовые биржи с ценными бумагами и валютой. А если ещё уточнить его отношение к этим вариантам инвестиций, то он, с вероятностью 99%, ответит, что вклады – это невыгодно, так как процентная ставка не покрывает уровень инфляции. А про то, чтобы вложить деньги в фондовую биржу, речи быть не может, так как это большой риск. При этом понятие «ПИФ», вообще, покажется просто инопланетным словом</p>
-            <p class="video-text">Почему так?</p>
-            <p class="video-text">Всё просто: 90% населения, как это ни ужасно, страдает от финансовой безграмотности. Люди мучаются из-за, порой, кабальной зависимости от зарплаты и при этом не хотят/боятся/не знают, как обрести более стабильные и достойные источники дохода</p>
+            <h3 class="general-title">Путь успеха: от бедного механика – до миллионера</h3>
+            <p class="video-text"><span>2003 год. </span>Институт. Я «заболел» автогонками, участвовал в соревнованиях и даже работал механиком на чемпионате по ралли.</p>
+            <p class="video-text"><span>2006 год. </span>Женился и понял, что на зарплату механика не проживёшь и вместе с другом открыл службу эвакуации с 2-мя эвакуаторами и раскрученным сайтом. Чуть позже мы открыли макетную мастерскую с невиданными тогда 3D-принтерами. Дело пошло, и первый бизнес мы продали.</p>
+            <p class="video-text"><span>2009 год. </span>Мировой кризис. Бизнес рухнул. Рождение сына вдохновляло меня. Я пошёл в торговлю, устроился менеджером по продаже автомобилей и начал зарабатывать столько же, сколько и во времена бизнеса – в среднем, 150 тысяч руб. в месяц.</p>
+            <p class="video-text"><span>2010-2019 годы. </span>Я пробовал разные способы заработка – открывал бизнес, был риэлтором, бизнес-тренером, топ-менеджером, но «пробить планку» в 200 тыс. руб. в месяц не мог. Некоторое время я жил на полмиллиона в месяц. Доход мечты особо не изменил мою жизнь, а когда он снизился, я столкнулся с личным кризисом – я стал тратить больше, чем зарабатываю. И когда я залез в долги, то понял, что неправильно распоряжаюсь деньгами, и финансовый успех не значит много зарабатывать.</p>
+            <p class="video-text">Из книг по финансовой грамотности я знал, что нужно потратить несколько лет на создание капитала, управляя имеющимися доходами, а потом перейти на пассивную прибыль. Это выгоднее сценария, в котором нужно постоянно и с каждым годом всё больше работать, чтобы жить по-человечески, а в старости рассчитывать лишь на пенсию и детей.</p>
+            <p class="video-text"><span>2019 год. </span>Стал миллионером всего за год и впервые за трудовую деятельность обрёл капитал, избавившись от проблемы нехватки денег. Чтобы достичь этого, я подробно изучил на практике финансовую грамотность, бухгалтерию, финучёт. И создал практический курс по финансам – коучинг-марафон «1 час в будущее».</p>
+            <p class="video-text"><span>2020 год. </span>Я – успешный тренер по личным финансам. Я с ужасом и жалостью наблюдаю за людьми, которые вынуждены добывать деньги ценой своего здоровья. Я обучаю всех желающих тому, как за 5-7 лет обрести финансовую независимость.</p>
           </div>
         </div>
       </div>
     </section>
     <section id="for">
       <div class="container">
-        <h3 class="general-title general-title-center">Для кого этот мастер-класс</h3>
+        <h3 class="general-title general-title-center">Этот мастер-класс будет полезен тем, кто:</h3>
         <div class="row">
               <div class="col-md-4">
                 <div class="for-item for-item-1">
@@ -145,7 +149,7 @@
     <section id="benefits">
       <div class="benefits-1">
         <div class="container">
-          <h3 class="general-title general-title-center">Выгоды от посещения МК</h3>
+          <h3 class="general-title general-title-center">Выгоды от посещения мастер-класса</h3>
           <div class="row">
             <div class="col-md-4">
                   <div class="benefit benefit-1">
@@ -155,7 +159,7 @@
                     <p class="benefit-text">Познакомишься с людьми, которые так же, как и ты хочет больше финансовой свободы</p>
                   </div>
             </div>
-            <div class="col-md-4"><img class="benefits-img" src="img/images/benefits.png" alt="Выгоды от посещения МК"/></div>
+            <div class="col-md-4"><img class="benefits-img" src="img/images/benefits.png" alt="Выгоды от посещения мастер-класса"/></div>
             <div class="col-md-4">
                   <div class="benefit benefit-3">
                     <p class="benefit-text">Поймешь, как посчитать чистую доходность от вложенных денег. И почему, чем больше капитал, тем доходность выше</p>
@@ -178,8 +182,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <div class="benefit-more"><img class="benefit-more-img" src="img/icons/benefit-1.png" alt="Что будет на МК"/>
-                <h3 class="general-title general-title-benefit-more">Что будет на МК</h3>
+              <div class="benefit-more"><img class="benefit-more-img" src="img/icons/benefit-1.png" alt="Что будет на мастер-классе"/>
+                <h3 class="general-title general-title-benefit-more">Что будет на мастер-классе</h3>
                 <ul class="benefit-more-list">
                   <li>- Разберем пошаговый план, как перейти с активного на пассивный доход без финансовых рисков для себя</li>
                   <li>- Определишь, какой капитал тебе необходим для финансовой свободы</li>
@@ -192,8 +196,8 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="benefit-more"><img class="benefit-more-img" src="img/icons/benefit-2.png" alt="Эффект от МК"/>
-                <h3 class="general-title general-title-benefit-more">Эффект от МК</h3>
+              <div class="benefit-more"><img class="benefit-more-img" src="img/icons/benefit-2.png" alt="Эффект от мастер-класса"/>
+                <h3 class="general-title general-title-benefit-more">Эффект от мастер-класса</h3>
                 <ul class="benefit-more-list">
                   <li>- Появятся полноценные выходные. Да, такое возможно!</li>
                   <li>- Научишься грамотно управлять своими денежными активами по всем направлениям – от покупок до открытия бизнеса</li>
@@ -214,14 +218,10 @@
         <div class="author">
           <h4 class="author-title">Об авторе<small>Буленков Николай Владимирович, 37 лет</small></h4>
           <ul class="author-list">
-            <li><span>Руководитель Обучающего цифрового агентства недвижимости “33 СЛОНА” в составе Холдинга MailRu Group</span></li>
-            <li>Тренер по личным финансам, Бизнесмен, Инвестор, член Клуба Миллионеров</li>
-            <li>За 2019 год нанял и обучил 897 менеджеров по продажам в сфере недвижимости благодаря собственной технологии потокового найма персонала</li>
-            <li><span>2017 - 2019 гг.</span></li>
-            <li>Директор по продажам Like Центра Аяза Шабутдинова</li>
-            <li>Выручка департамента продаж Москвы</li>
-            <li>2017 г. - 14 млн руб/мес</li>
-            <li>2018 г. - 50 млн руб/мес</li>
+            <li>Бизнесмен, инвестор</li>
+            <li>Член Клуба Миллионеров</li>
+            <li>Тренер по личным финансам</li>
+            <li>Руководитель Обучающего цифрового агентства недвижимости «33 слона» в составе Холдинга MailRu Group</li>
           </ul>
           <div class="author-img"><img src="img/images/nikolay.png" alt="Николай Буленков"/></div>
         </div>
@@ -230,9 +230,9 @@
             <div class="author-about author-about-1">
               <p class="author-about-text"><span>Награды:</span></p>
               <ul class="author-about-list">
-                <li>- Лучший сотрудник года - Агентство Недвижимости ЮСИН</li>
-                <li>- Сертификат: Серебряный риэлтор</li>
-                <li>- Создатель самого полезного обучающего продукта на рынке (Международная Ассоциация Успешных Агентов)</li>
+                <li>- Лучший сотрудник года (Агентство недвижимости «ЮСИН»)</li>
+                <li>- Сертификат «Серебряный риэлтор»</li>
+                <li>- Сертификат Международной Ассоциации Успешных Агентов за создание полезного обучающего продукта</li>
               </ul>
             </div>
             <div class="author-about author-about-2">
@@ -242,26 +242,13 @@
           </div>
           <div class="col-md-6">
             <div class="author-about author-about-3">
-              <p class="author-about-text">Онлайн обучение финансовой грамотности на практике.</p>
-              <p class="author-about-text">C 2014 года являюсь тренером по продажам, РОПом, Директором по продажам</p>
-              <p class="author-about-text">Обучил более 2500 соискателей, как увеличивать свой доход. В 2019 году столкнулся с личным финансовым кризисом, несмотря на высокие доходы. Глубоко изучил на практике (курсы, финансовые советники, практическое применение) финансовую грамотность, бухгалтерию, финучет. Применил и внедрил технологии финансового управления в личных целях. За год стал миллионером, впервые за всю трудовую деятельность (более 15 лет) появился капитал, финансовая подушка и ушла проблема денег. Доход при этом остался на том же уровне, что и во время личного финансового кризиса. Имея богатый опыт создания и проведения обучающих курсов - создал практический курс по внедрению управления финансами, финансовой грамотности и финансовой психологии. Коучинг-марафон "1 час в будущее"</p>
+              <p class="author-about-text">Имеет обширный опыт работы в сфере продаж (тренер по продажам, РОП, директор по продажам)</p>
+              <p class="author-about-text">За 3 года в должности директора по продажам Like Центра Аяза Шабутдинова увеличил выручку московского департамента с 14 до 50 млн. рублей в месяц</p>
+              <p class="author-about-text">Его методика помогла более 2500 соискателям узнать, как увеличить доход</p>
+              <p class="author-about-text">Создатель самого эффективного обучающего продукта для персонала в сфере недвижимости «Симулятор сделки»</p>
+              <p class="author-about-text">В 2019 году нанял и обучил 897 менеджеров по продажам в сфере недвижимости по собственной технологии потокового найма персонала</p>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <section id="revs">
-      <div class="container">
-        <h3 class="general-title">Отзывы наших клиентов</h3>
-        <div class="row">
-          <div class="col-md-4"><img class="rev-img" src="img/images/rev.png" alt="Отзыв"/></div>
-          <div class="col-md-4"><img class="rev-img" src="img/images/rev.png" alt="Отзыв"/></div>
-          <div class="col-md-4"><img class="rev-img" src="img/images/rev.png" alt="Отзыв"/></div>
-        </div>
-        <div class="row">
-          <div class="col-md-4"><img class="rev-img" src="img/images/rev.png" alt="Отзыв"/></div>
-          <div class="col-md-4"><img class="rev-img" src="img/images/rev.png" alt="Отзыв"/></div>
-          <div class="col-md-4"><img class="rev-img" src="img/images/rev.png" alt="Отзыв"/></div>
         </div>
       </div>
     </section>
@@ -294,7 +281,7 @@
         <p class="alert-message"></p>
         <div class="checking checking-modal">
           <input class="check" type="checkbox" id="check-2" checked="checked"/>
-          <label class="check-label" for="check-2">Я согласен с <a href="https://mastervision.su/politics.pdf" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
+          <label class="check-label" for="check-2">Я согласен с <a href="https://mycapitalland.ru/politics.pdf" target="_blank" download="download">условиями обработки</a> персональных данных по 152 - Ф3</label>
         </div>
         <div style="display: none;">
           <div id="formTypeSpecificVars-2" style="display: none;">
