Main page and Thank page are adapted

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <button class="button button-form button-form-main" type="submit">Записаться</button>
               <div class="clearfix"></div>
               <p class="alert-message"></p>
-              <div class="checking">
+              <div class="checking checking-main">
                 <input class="check" type="checkbox" id="check-1" checked="checked"/>
                 <label class="check-label" for="check-1">Я согласен с <a href="https://mycapitalland.ru/politics.pdf" target="_blank" download="download">условиями обработки</a> персональных данных по 152 - Ф3</label>
               </div>
@@ -80,30 +80,24 @@
     </section>
     <section id="video">
       <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="laptop-wrapper laptop-wrapper-video">
-              <div class="video-wrapper">
-                <iframe src="https://youtube.com/embed/aZnnJ5ALCGo?modestbranding=1&amp;autoplay=1&amp;mute=1" allowfullscreen="allowfullscreen"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <h3 class="general-title">Путь успеха: от бедного механика – до миллионера</h3>
-            <p class="video-text"><span>2003 год. </span>Институт. Я «заболел» автогонками, участвовал в соревнованиях и даже работал механиком на чемпионате по ралли.</p>
-            <p class="video-text"><span>2006 год. </span>Женился и понял, что на зарплату механика не проживёшь и вместе с другом открыл службу эвакуации с 2-мя эвакуаторами и раскрученным сайтом. Чуть позже мы открыли макетную мастерскую с невиданными тогда 3D-принтерами. Дело пошло, и первый бизнес мы продали.</p>
-            <p class="video-text"><span>2009 год. </span>Мировой кризис. Бизнес рухнул. Рождение сына вдохновляло меня. Я пошёл в торговлю, устроился менеджером по продаже автомобилей и начал зарабатывать столько же, сколько и во времена бизнеса – в среднем, 150 тысяч руб. в месяц.</p>
-            <p class="video-text"><span>2010-2019 годы. </span>Я пробовал разные способы заработка – открывал бизнес, был риэлтором, бизнес-тренером, топ-менеджером, но «пробить планку» в 200 тыс. руб. в месяц не мог. Некоторое время я жил на полмиллиона в месяц. Доход мечты особо не изменил мою жизнь, а когда он снизился, я столкнулся с личным кризисом – я стал тратить больше, чем зарабатываю. И когда я залез в долги, то понял, что неправильно распоряжаюсь деньгами, и финансовый успех не значит много зарабатывать.</p>
-            <p class="video-text">Из книг по финансовой грамотности я знал, что нужно потратить несколько лет на создание капитала, управляя имеющимися доходами, а потом перейти на пассивную прибыль. Это выгоднее сценария, в котором нужно постоянно и с каждым годом всё больше работать, чтобы жить по-человечески, а в старости рассчитывать лишь на пенсию и детей.</p>
-            <p class="video-text"><span>2019 год. </span>Стал миллионером всего за год и впервые за трудовую деятельность обрёл капитал, избавившись от проблемы нехватки денег. Чтобы достичь этого, я подробно изучил на практике финансовую грамотность, бухгалтерию, финучёт. И создал практический курс по финансам – коучинг-марафон «1 час в будущее».</p>
-            <p class="video-text"><span>2020 год. </span>Я – успешный тренер по личным финансам. Я с ужасом и жалостью наблюдаю за людьми, которые вынуждены добывать деньги ценой своего здоровья. Я обучаю всех желающих тому, как за 5-7 лет обрести финансовую независимость.</p>
+        <div class="laptop-wrapper laptop-wrapper-video">
+          <div class="video-wrapper">
+            <iframe src="https://youtube.com/embed/aZnnJ5ALCGo?modestbranding=1&amp;autoplay=1&amp;mute=1" allowfullscreen="allowfullscreen"></iframe>
           </div>
         </div>
+        <h3 class="general-title">Путь успеха: от бедного механика – до миллионера</h3>
+        <p class="video-text"><span>2003 год. </span>Институт. Я «заболел» автогонками, участвовал в соревнованиях и даже работал механиком на чемпионате по ралли.</p>
+        <p class="video-text"><span>2006 год. </span>Женился и понял, что на зарплату механика не проживёшь и вместе с другом открыл службу эвакуации с 2-мя эвакуаторами и раскрученным сайтом. Чуть позже мы открыли макетную мастерскую с невиданными тогда 3D-принтерами. Дело пошло, и первый бизнес мы продали.</p>
+        <p class="video-text"><span>2009 год. </span>Мировой кризис. Бизнес рухнул. Рождение сына вдохновляло меня. Я пошёл в торговлю, устроился менеджером по продаже автомобилей и начал зарабатывать столько же, сколько и во времена бизнеса – в среднем, 150 тысяч руб. в месяц.</p>
+        <p class="video-text"><span>2010-2019 годы. </span>Я пробовал разные способы заработка – открывал бизнес, был риэлтором, бизнес-тренером, топ-менеджером, но «пробить планку» в 200 тыс. руб. в месяц не мог. Некоторое время я жил на полмиллиона в месяц. Доход мечты особо не изменил мою жизнь, а когда он снизился, я столкнулся с личным кризисом – я стал тратить больше, чем зарабатываю. И когда я залез в долги, то понял, что неправильно распоряжаюсь деньгами, и финансовый успех не значит много зарабатывать.</p>
+        <p class="video-text">Из книг по финансовой грамотности я знал, что нужно потратить несколько лет на создание капитала, управляя имеющимися доходами, а потом перейти на пассивную прибыль. Это выгоднее сценария, в котором нужно постоянно и с каждым годом всё больше работать, чтобы жить по-человечески, а в старости рассчитывать лишь на пенсию и детей.</p>
+        <p class="video-text"><span>2019 год. </span>Стал миллионером всего за год и впервые за трудовую деятельность обрёл капитал, избавившись от проблемы нехватки денег. Чтобы достичь этого, я подробно изучил на практике финансовую грамотность, бухгалтерию, финучёт. И создал практический курс по финансам – коучинг-марафон «1 час в будущее».</p>
+        <p class="video-text"><span>2020 год. </span>Я – успешный тренер по личным финансам. Я с ужасом и жалостью наблюдаю за людьми, которые вынуждены добывать деньги ценой своего здоровья. Я обучаю всех желающих тому, как за 5-7 лет обрести финансовую независимость.</p>
       </div>
     </section>
     <section id="for">
       <div class="container">
-        <h3 class="general-title general-title-center">Этот мастер-класс будет полезен тем, кто:</h3>
+        <h3 class="general-title general-title-center general-title-for">Этот мастер-класс будет полезен тем, кто:</h3>
         <div class="row">
               <div class="col-md-4">
                 <div class="for-item for-item-1">
@@ -134,7 +128,7 @@
               <div class="col-md-4">
                 <div class="for-item for-item-5">
                   <h4 class="for-item-title">5</h4>
-                  <p class="for-item-text">Хочет научится грамотно управлять своими активами</p>
+                  <p class="for-item-text">Хочет научиться грамотно управлять своими активами</p>
                 </div>
               </div>
               <div class="col-md-4">
@@ -149,14 +143,14 @@
     <section id="benefits">
       <div class="benefits-1">
         <div class="container">
-          <h3 class="general-title general-title-center">Выгоды от посещения мастер-класса</h3>
+          <h3 class="general-title general-title-center general-title-benefits">Выгоды от посещения мастер-класса</h3>
           <div class="row">
             <div class="col-md-4">
                   <div class="benefit benefit-1">
                     <p class="benefit-text">Узнаешь 4 навыка работы с деньгами, о которых знают все миллионеры</p>
                   </div>
                   <div class="benefit benefit-2">
-                    <p class="benefit-text">Познакомишься с людьми, которые так же, как и ты хочет больше финансовой свободы</p>
+                    <p class="benefit-text">Познакомишься с людьми, которые так же, как и ты хотят больше финансовой свободы</p>
                   </div>
             </div>
             <div class="col-md-4"><img class="benefits-img" src="img/images/benefits.png" alt="Выгоды от посещения мастер-класса"/></div>
@@ -172,7 +166,7 @@
           <div class="row">
             <div class="col-md-4 col-md-offset-4">
                   <div class="benefit benefit-5">
-                    <p class="benefit-text">Выяснишь 7 привычек успешных людей и как их внедрить в свою жизнь</p>
+                    <p class="benefit-text">Выяснишь 7 привычек успешных людей, и как их внедрить в свою жизнь</p>
                   </div>
             </div>
           </div>
